--- a/requirements.txt
+++ b/requirements.txt
@@ -5,90 +5,102 @@
 #    pip-compile requirements.in
 #
 altair==4.1.0             # via streamlit
+argon2-cffi==20.1.0       # via notebook
 astor==0.8.1              # via streamlit
-attrs==19.3.0             # via jsonschema
-backcall==0.1.0           # via ipython
-base58==2.0.0             # via streamlit
-bleach==3.1.5             # via nbconvert
+async-generator==1.10     # via nbclient
+attrs==20.2.0             # via jsonschema
+backcall==0.2.0           # via ipython
+base58==2.0.1             # via streamlit
+bleach==3.2.1             # via nbconvert
 blinker==1.4              # via streamlit
-boto3==1.13.8             # via streamlit
-botocore==1.16.8          # via boto3, s3transfer, streamlit
-cachetools==4.1.0         # via streamlit
-certifi==2020.4.5.1       # via requests
+boto3==1.16.4             # via streamlit
+botocore==1.19.4          # via boto3, s3transfer, streamlit
+cachetools==4.1.1         # via streamlit
+certifi==2020.6.20        # via matplotlib, requests
+cffi==1.14.3              # via argon2-cffi
 chardet==3.0.4            # via requests
 click==7.1.2              # via streamlit
-colorama==0.4.3           # via ipython
+colorama==0.4.4           # via ipython
 cycler==0.10.0            # via matplotlib
-decorator==4.4.2          # via ipython, traitlets, validators
+decorator==4.4.2          # via ipython, validators
 defusedxml==0.6.0         # via nbconvert
-docutils==0.15.2          # via botocore
 entrypoints==0.3          # via altair, nbconvert
 enum-compat==0.0.3        # via streamlit
-idna==2.9                 # via requests
-importlib-metadata==1.6.0  # via jsonschema
-ipykernel==5.2.1          # via ipywidgets, notebook, pydeck
+gitdb==4.0.5              # via gitpython
+gitpython==3.1.11         # via streamlit
+idna==2.10                # via requests
+importlib-metadata==2.0.0  # via jsonschema
+intervaltree==3.1.0       # via -r requirements.in
+ipykernel==5.3.4          # via ipywidgets, notebook, pydeck
 ipython-genutils==0.2.0   # via nbformat, notebook, traitlets
-ipython==7.14.0           # via ipykernel, ipywidgets
+ipython==7.18.1           # via ipykernel, ipywidgets
 ipywidgets==7.5.1         # via pydeck
-jedi==0.17.0              # via ipython
+jedi==0.17.2              # via ipython
 jinja2==2.11.2            # via altair, nbconvert, notebook, pydeck
 jmespath==0.10.0          # via boto3, botocore
-joblib==0.14.1            # via scikit-learn
+joblib==0.17.0            # via scikit-learn
 jsonschema==3.2.0         # via altair, nbformat
-jupyter-client==6.1.3     # via ipykernel, notebook
+jupyter-client==6.1.7     # via ipykernel, nbclient, notebook
 jupyter-core==4.6.3       # via jupyter-client, nbconvert, nbformat, notebook
+jupyterlab-pygments==0.1.2  # via nbconvert
 kiwisolver==1.2.0         # via matplotlib
 markupsafe==1.1.1         # via jinja2
-matplotlib==3.2.1         # via -r requirements.in, seaborn
+matplotlib==3.3.2         # via -r requirements.in, seaborn
 mistune==0.8.4            # via nbconvert
-nbconvert==5.6.1          # via notebook
-nbformat==5.0.6           # via ipywidgets, nbconvert, notebook
-notebook==6.0.3           # via widgetsnbextension
-numpy==1.18.4             # via -r requirements.in, altair, matplotlib, pandas, pydeck, scikit-learn, scipy, seaborn, streamlit
-packaging==20.3           # via bleach, streamlit
-pandas==1.0.3             # via -r requirements.in, altair, seaborn, streamlit
-pandocfilters==1.4.2      # via nbconvert
-parso==0.7.0              # via jedi
+nbclient==0.5.1           # via nbconvert
+nbconvert==6.0.7          # via notebook
+nbformat==5.0.8           # via ipywidgets, nbclient, nbconvert, notebook
+nest-asyncio==1.4.1       # via nbclient
+notebook==6.1.4           # via widgetsnbextension
+numpy==1.19.2             # via -r requirements.in, altair, matplotlib, pandas, pyarrow, pydeck, scikit-learn, scipy, seaborn, streamlit
+packaging==20.4           # via bleach, streamlit
+pandas==1.1.3             # via -r requirements.in, altair, seaborn, streamlit
+pandocfilters==1.4.3      # via nbconvert
+parso==0.7.1              # via jedi
 pathtools==0.1.2          # via watchdog
 pickleshare==0.7.5        # via ipython
-pillow==7.1.2             # via streamlit
-plotly==4.3.0             # via -r requirements.in
-prometheus-client==0.7.1  # via notebook
-prompt-toolkit==3.0.5     # via ipython
-protobuf==3.11.3          # via streamlit
-pydeck==0.3.1             # via streamlit
-pygments==2.6.1           # via ipython, nbconvert
+pillow==8.0.1             # via matplotlib, streamlit
+plotly==4.12.0            # via -r requirements.in
+prometheus-client==0.8.0  # via notebook
+prompt-toolkit==3.0.8     # via ipython
+protobuf==3.13.0          # via streamlit
+pyarrow==2.0.0            # via streamlit
+pycparser==2.20           # via cffi
+pydeck==0.4.1             # via streamlit
+pygments==2.7.2           # via ipython, jupyterlab-pygments, nbconvert
 pyparsing==2.4.7          # via matplotlib, packaging
-pyrsistent==0.16.0        # via jsonschema
+pyrsistent==0.17.3        # via jsonschema
 python-dateutil==2.8.1    # via botocore, jupyter-client, matplotlib, pandas, streamlit
 pytz==2020.1              # via pandas, tzlocal
-pyzmq==19.0.1             # via jupyter-client, notebook
-requests==2.23.0          # via streamlit
+pyzmq==19.0.2             # via jupyter-client, notebook
+requests==2.24.0          # via streamlit
 retrying==1.3.3           # via plotly
 s3transfer==0.3.3         # via boto3
-scikit-learn==0.23.0      # via sklearn
-scipy==1.4.1              # via scikit-learn, seaborn
-seaborn==0.10.1           # via -r requirements.in
+scikit-learn==0.23.2      # via sklearn
+scipy==1.5.3              # via scikit-learn, seaborn
+seaborn==0.11.0           # via -r requirements.in
 send2trash==1.5.0         # via notebook
-six==1.14.0               # via bleach, cycler, jsonschema, packaging, plotly, protobuf, pyrsistent, python-dateutil, retrying, traitlets, validators
+six==1.15.0               # via argon2-cffi, bleach, cycler, jsonschema, packaging, plotly, protobuf, python-dateutil, retrying, validators
 sklearn==0.0              # via -r requirements.in
-streamlit==0.59.0         # via -r requirements.in
-terminado==0.8.3          # via notebook
+smmap==3.0.4              # via gitdb
+sortedcontainers==2.2.2   # via intervaltree
+streamlit==0.69.2         # via -r requirements.in
+terminado==0.9.1          # via notebook
 testpath==0.4.4           # via nbconvert
-threadpoolctl==2.0.0      # via scikit-learn
-toml==0.10.0              # via streamlit
-toolz==0.10.0             # via altair
-tornado==5.1.1            # via ipykernel, jupyter-client, notebook, streamlit, terminado
-traitlets==4.3.3          # via ipykernel, ipython, ipywidgets, jupyter-client, jupyter-core, nbconvert, nbformat, notebook, pydeck
+threadpoolctl==2.1.0      # via scikit-learn
+toml==0.10.1              # via streamlit
+toolz==0.11.1             # via altair
+tornado==6.0.4            # via ipykernel, jupyter-client, notebook, streamlit, terminado
+traitlets==5.0.5          # via ipykernel, ipython, ipywidgets, jupyter-client, jupyter-core, nbclient, nbconvert, nbformat, notebook, pydeck
 tzlocal==2.1              # via streamlit
-urllib3==1.25.9           # via botocore, requests
-validators==0.15.0        # via streamlit
-watchdog==0.10.2          # via streamlit
-wcwidth==0.1.9            # via prompt-toolkit
+urllib3==1.25.11          # via botocore, requests
+validators==0.18.1        # via streamlit
+watchdog==0.10.3          # via streamlit
+wcwidth==0.2.5            # via prompt-toolkit
 webencodings==0.5.1       # via bleach
 widgetsnbextension==3.5.1  # via ipywidgets
 xlrd==1.2.0               # via -r requirements.in
-zipp==3.1.0               # via importlib-metadata
+zipp==3.3.2               # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
