--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ backcall==0.2.0           # via ipython
 base58==2.0.1             # via streamlit
 bleach==3.2.1             # via nbconvert
 blinker==1.4              # via streamlit
-boto3==1.16.15            # via streamlit
-botocore==1.19.15         # via boto3, s3transfer, streamlit
+boto3==1.16.18            # via streamlit
+botocore==1.19.18         # via boto3, s3transfer, streamlit
 cachetools==4.1.1         # via streamlit
-certifi==2020.11.8        # via matplotlib, requests
+certifi==2020.11.8        # via requests
 cffi==1.14.3              # via argon2-cffi
 chardet==3.0.4            # via requests
 click==7.1.2              # via streamlit
@@ -44,12 +44,12 @@ jupyter-core==4.6.3       # via jupyter-client, nbconvert, nbformat, notebook
 jupyterlab-pygments==0.1.2  # via nbconvert
 kiwisolver==1.3.1         # via matplotlib
 markupsafe==1.1.1         # via jinja2
-matplotlib==3.3.2         # via -r requirements.in, seaborn
+matplotlib==3.3.3         # via -r requirements.in, seaborn
 mistune==0.8.4            # via nbconvert
 nbclient==0.5.1           # via nbconvert
 nbconvert==6.0.7          # via notebook
 nbformat==5.0.8           # via ipywidgets, nbclient, nbconvert, notebook
-nest-asyncio==1.4.2       # via nbclient
+nest-asyncio==1.4.3       # via nbclient
 notebook==6.1.5           # via widgetsnbextension
 numpy==1.19.4             # via -r requirements.in, altair, matplotlib, pandas, pyarrow, pydeck, scikit-learn, scipy, seaborn, streamlit
 packaging==20.4           # via bleach, streamlit
@@ -62,7 +62,7 @@ pillow==8.0.1             # via matplotlib, streamlit
 plotly==4.12.0            # via -r requirements.in
 prometheus-client==0.8.0  # via notebook
 prompt-toolkit==3.0.8     # via ipython
-protobuf==3.13.0          # via streamlit
+protobuf==3.14.0          # via streamlit
 pyarrow==2.0.0            # via streamlit
 pycparser==2.20           # via cffi
 pydeck==0.5.0             # via streamlit
@@ -71,8 +71,8 @@ pyparsing==2.4.7          # via matplotlib, packaging
 pyrsistent==0.17.3        # via jsonschema
 python-dateutil==2.8.1    # via botocore, jupyter-client, matplotlib, pandas, streamlit
 pytz==2020.4              # via pandas, tzlocal
-pyzmq==19.0.2             # via jupyter-client, notebook
-requests==2.24.0          # via streamlit
+pyzmq==20.0.0             # via jupyter-client, notebook
+requests==2.25.0          # via streamlit
 retrying==1.3.3           # via plotly
 s3transfer==0.3.3         # via boto3
 scikit-learn==0.23.2      # via sklearn
@@ -82,7 +82,7 @@ send2trash==1.5.0         # via notebook
 six==1.15.0               # via argon2-cffi, bleach, cycler, jsonschema, packaging, plotly, protobuf, python-dateutil, retrying, validators
 sklearn==0.0              # via -r requirements.in
 smmap==3.0.4              # via gitdb
-streamlit==0.70.0         # via -r requirements.in
+streamlit==0.71.0         # via -r requirements.in
 terminado==0.9.1          # via notebook
 testpath==0.4.4           # via nbconvert
 threadpoolctl==2.1.0      # via scikit-learn
@@ -91,7 +91,7 @@ toolz==0.11.1             # via altair
 tornado==6.1              # via ipykernel, jupyter-client, notebook, streamlit, terminado
 traitlets==5.0.5          # via ipykernel, ipython, ipywidgets, jupyter-client, jupyter-core, nbclient, nbconvert, nbformat, notebook, pydeck
 tzlocal==2.1              # via streamlit
-urllib3==1.25.11          # via botocore, requests
+urllib3==1.26.2           # via botocore, requests
 validators==0.18.1        # via streamlit
 watchdog==0.10.3          # via streamlit
 wcwidth==0.2.5            # via prompt-toolkit
